// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcSmartTable should render properly 1`] = `
<div
  class="ec-table-scroll-container"
>
  <table
    class="ec-table"
  >
    <!---->
     
    <!---->
     
    <tbody>
      <tr
        data-test="ec-table__row ec-table__row--0"
      >
        <td
          class="ec-table__cell"
          data-test="ec-table__cell ec-table__cell--0"
        >
          1
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell ec-table__cell--1"
        >
          2
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell ec-table__cell--2"
        >
          3
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</div>
`;

exports[`EcSmartTable sorting multi sort should allow sorting multiple columns: After sorting different column #2 ([DESC, null, ASC]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 1
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Sorted descending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            desc
          </span>
        </a>
      </div>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      
        Test 2
      
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 3
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting multi sort should allow sorting multiple columns: After sorting different column ([ASC, null, ASC]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 1
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </div>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      
        Test 2
      
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 3
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting multi sort should allow sorting multiple columns: Initial state ([ASC, null, null]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 1
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </div>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      
        Test 2
      
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 3
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting multi sort should sort column: ASC -> DESC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <div
    class="ec-table-sort"
    data-test="ec-table-sort"
  >
    <div
      class="ec-table-sort__title"
    >
      Test 1
    </div>
     
    <a
      class="ec-table-sort__icon-wrapper"
      data-test="ec-table-sort__icon-wrapper"
      href="#"
      title="Sorted descending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
        data-test="ec-table-sort__icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        desc
      </span>
    </a>
  </div>
</th>
`;

exports[`EcSmartTable sorting multi sort should sort column: ASC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <div
    class="ec-table-sort"
    data-test="ec-table-sort"
  >
    <div
      class="ec-table-sort__title"
    >
      Test 1
    </div>
     
    <a
      class="ec-table-sort__icon-wrapper"
      data-test="ec-table-sort__icon-wrapper"
      href="#"
      title="Sorted ascending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
        data-test="ec-table-sort__icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        asc
      </span>
    </a>
  </div>
</th>
`;

exports[`EcSmartTable sorting multi sort should sort column: DESC -> not sorted 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <div
    class="ec-table-sort"
    data-test="ec-table-sort"
  >
    <div
      class="ec-table-sort__title"
    >
      Test 1
    </div>
     
    <a
      class="ec-table-sort__icon-wrapper"
      data-test="ec-table-sort__icon-wrapper"
      href="#"
      title="Not sorted"
    >
      <svg
        class="ec-icon ec-table-sort__icon"
        data-test="ec-table-sort__icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-arrow-up-down"
        />
      </svg>
       
      <!---->
    </a>
  </div>
</th>
`;

exports[`EcSmartTable sorting multi sort should sort column: not sorted -> ASC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <div
    class="ec-table-sort"
    data-test="ec-table-sort"
  >
    <div
      class="ec-table-sort__title"
    >
      Test 1
    </div>
     
    <a
      class="ec-table-sort__icon-wrapper"
      data-test="ec-table-sort__icon-wrapper"
      href="#"
      title="Sorted ascending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
        data-test="ec-table-sort__icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        asc
      </span>
    </a>
  </div>
</th>
`;

exports[`EcSmartTable sorting should render sortable columns 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 1
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </div>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      
        Test 2
      
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 3
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting should render sorted columns 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 1
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </div>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      
        Test 2
      
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 3
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Sorted descending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            desc
          </span>
        </a>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting single sort should allow sorting only one column: After sorting different column #2 ([ASC, null, null]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 1
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </div>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      
        Test 2
      
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 3
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting single sort should allow sorting only one column: After sorting different column ([null, null, ASC]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 1
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </div>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      
        Test 2
      
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 3
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting single sort should allow sorting only one column: Initial state ([ASC, null, null]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 1
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </div>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      
        Test 2
      
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <div
        class="ec-table-sort"
        data-test="ec-table-sort"
      >
        <div
          class="ec-table-sort__title"
        >
          Test 3
        </div>
         
        <a
          class="ec-table-sort__icon-wrapper"
          data-test="ec-table-sort__icon-wrapper"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting single sort should sort column: ASC -> DESC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <div
    class="ec-table-sort"
    data-test="ec-table-sort"
  >
    <div
      class="ec-table-sort__title"
    >
      Test 1
    </div>
     
    <a
      class="ec-table-sort__icon-wrapper"
      data-test="ec-table-sort__icon-wrapper"
      href="#"
      title="Sorted descending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
        data-test="ec-table-sort__icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        desc
      </span>
    </a>
  </div>
</th>
`;

exports[`EcSmartTable sorting single sort should sort column: ASC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <div
    class="ec-table-sort"
    data-test="ec-table-sort"
  >
    <div
      class="ec-table-sort__title"
    >
      Test 1
    </div>
     
    <a
      class="ec-table-sort__icon-wrapper"
      data-test="ec-table-sort__icon-wrapper"
      href="#"
      title="Sorted ascending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
        data-test="ec-table-sort__icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        asc
      </span>
    </a>
  </div>
</th>
`;

exports[`EcSmartTable sorting single sort should sort column: DESC -> not sorted 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <div
    class="ec-table-sort"
    data-test="ec-table-sort"
  >
    <div
      class="ec-table-sort__title"
    >
      Test 1
    </div>
     
    <a
      class="ec-table-sort__icon-wrapper"
      data-test="ec-table-sort__icon-wrapper"
      href="#"
      title="Not sorted"
    >
      <svg
        class="ec-icon ec-table-sort__icon"
        data-test="ec-table-sort__icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-arrow-up-down"
        />
      </svg>
       
      <!---->
    </a>
  </div>
</th>
`;

exports[`EcSmartTable sorting single sort should sort column: not sorted -> ASC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <div
    class="ec-table-sort"
    data-test="ec-table-sort"
  >
    <div
      class="ec-table-sort__title"
    >
      Test 1
    </div>
     
    <a
      class="ec-table-sort__icon-wrapper"
      data-test="ec-table-sort__icon-wrapper"
      href="#"
      title="Sorted ascending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
        data-test="ec-table-sort__icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        asc
      </span>
    </a>
  </div>
</th>
`;
